[gd_scene load_steps=8 format=3 uid="uid://bp4do3xot4u25"]

[ext_resource type="Script" path="res://Scenes/TableList/TableListItem.gd" id="1_a10eb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ymaws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m81ti"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8btx1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_grsxj"]
bg_color = Color(0, 0, 0, 0.027451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ra8q4"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.760784, 0, 0.776471, 1)
border_width_bottom = 5
border_color = Color(0.552941, 0, 0.564706, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_color = Color(0.346759, 0.136082, 0.353505, 0.196078)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssfco"]
content_margin_left = 25.0
content_margin_top = 10.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.890196, 0, 0.905882, 1)
border_width_bottom = 5
border_color = Color(0.609547, 0.000320674, 0.622401, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_color = Color(0.419608, 0.172549, 0.427451, 0.196078)
shadow_size = 10

[node name="TableListItem" type="PanelContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ymaws")
script = ExtResource("1_a10eb")
style_default = SubResource("StyleBoxEmpty_m81ti")
style_entered = SubResource("StyleBoxEmpty_8btx1")
style_hover = SubResource("StyleBoxFlat_grsxj")

[node name="TableListItem" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Spacer" type="Control" parent="TableListItem"]
custom_minimum_size = Vector2(2.08165e-12, 15)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TableListItem"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TableListItem/HBoxContainer"]
custom_minimum_size = Vector2(25, 2.08165e-12)
layout_mode = 2

[node name="NameLabel" type="Label" parent="TableListItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Meow"
vertical_alignment = 1

[node name="SmallBlindLabel" type="Label" parent="TableListItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="BigBlindLabel" type="Label" parent="TableListItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayersCountLabel" type="Label" parent="TableListItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnterBtn" type="Button" parent="TableListItem/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_ra8q4")
theme_override_styles/disabled = SubResource("StyleBoxFlat_ra8q4")
theme_override_styles/hover = SubResource("StyleBoxFlat_ssfco")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ra8q4")
theme_override_styles/normal = SubResource("StyleBoxFlat_ra8q4")
text = "Enter"

[node name="Spacer3" type="Control" parent="TableListItem/HBoxContainer"]
custom_minimum_size = Vector2(25, 2.08165e-12)
layout_mode = 2

[node name="Spacer2" type="Control" parent="TableListItem"]
custom_minimum_size = Vector2(2.08165e-12, 15)
layout_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TableListItem/HBoxContainer/EnterBtn" to="." method="_on_EnterBtn_mouse_entered"]
[connection signal="mouse_exited" from="TableListItem/HBoxContainer/EnterBtn" to="." method="_on_EnterBtn_mouse_exited"]
[connection signal="pressed" from="TableListItem/HBoxContainer/EnterBtn" to="." method="_on_EnterBtn_pressed"]
